--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ six==1.17.0
 smmap==5.0.2
 sqlalchemy==2.0.40
 sqlparse==0.5.3
+tabulate==0.9.0
 threadpoolctl==3.5.0
 typing-extensions==4.13.2
 tzdata==2025.2
